# py_rasmil

./: .gitignore  Makefile  README.md  Readme.md  python-rasmil.spec  setup.cfg  setup.py
.copr/: Makefile
examples/: circular.py
src/rasmil/: __init__.py  material.py  widgets.py  xfce.py
