[metadata]
name = rasmil
version = 1.0.1
author = Tim Lauridsen
author_email = tla@rasmil.dk
description = Misc python lib.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/timlau/py-rasmil
project_urls =
    Bug Tracker = https://github.com/timlau/py-rasmil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    dasbus
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src